--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,8 @@
     -->
     <title>19hz Map</title>
 
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <noscript>
